WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210818
Fix extra/missing #undef statements
https://bugs.webkit.org/show_bug.cgi?id=210818
Summary
Fix extra/missing #undef statements
David Kilzer (:ddkilzer)
Reported
2020-04-21 15:18:26 PDT
Fix extra/missing #undef statements. These issues could lead to build failures in the unified source build later if source files move around. <
rdar://problem/61973329
>
Attachments
Patch v1
(2.85 KB, patch)
2020-04-21 15:21 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2020-04-21 15:21:13 PDT
Created
attachment 397130
[details]
Patch v1
EWS
Comment 2
2020-04-21 17:27:40 PDT
Committed
r260476
: <
https://trac.webkit.org/changeset/260476
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 397130
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug