Fix extra/missing #undef statements <https://webkit.org/b/210818> <rdar://problem/61973329>

Reviewed by Chris Dumez.

* UIProcess/Network/NetworkProcessProxy.cpp:
- Remove #undef MESSAGE_CHECK_URL.  It is no longer used.
* UIProcess/WebPageProxy.cpp:
- Add missing #undef MESSAGE_CHECK_COMPLETION.
- Sort #undef in reverse order of #define.
* UIProcess/mac/WebPageProxyMac.mm:
- Add missing #undef MESSAGE_CHECK_WITH_RETURN_VALUE.
- Sort #undef in reverse order of #define.


Canonical link: https://commits.webkit.org/223714@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260476 268f45cc-cd09-0410-ab3c-d52691b4dbfc